# solopy

./: .gitignore  README.md  pyproject.toml
notebook/: _tmp.ipynb  comb-masterflat.ipynb  combmaster.ipynb  decompress_bz2.ipynb  solopy-example.ipynb  test.ipynb
notebooks/: combmaster-mask.ipynb  main.py  solopy-example.ipynb
scripts/: SxLC_01_MasterFrame.py  SxLC_02_Preprocess.py
solopy/: Lv0.py  Lv1.py  SxLC_03_Astroalign.py  SxLC_03_Merge.py  SxLC_04_PSF.py  _Lv0.py  _Lv1.py  __init__.py  _ccdutil.py  _combmaster.py  _fileutil.py  _utils.py  combmaster.py  fitslv0.py  fitslv1.py  fitslv2.py  fitslv3.py  gaia.py  psf.py  region.py
