[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "solopy"                # package name (shown on pip install)
version = "0.1.0"
description = "Astronomy tools for SOLO project"
authors = [
    { name="Bumhoo Lim", email="bumhoo7@snu.ac.kr" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"

dependencies = [
    "astropy",
    "numpy",
    "matplotlib",
    "sep",
    "ccdproc",
]

[tool.setuptools.packages.find]
where = ["solopy*"]
